# django-crud

./: .gitignore  .replit  Procfile  README.md  db.sqlite3  pyproject.toml  requirements.txt  serve.py  web.py
CRUD/: settings.py  urls.py  views.py
Notes/: models.py  urls.py  views.py
Notes/migrations/: 0001_initial.py  0002_message_title.py
Notes/static/Notes/: index.js  media.js  note.js  style.css
Notes/templates/: 403.html  404.html  500.html  base.html
Notes/templates/Notes/: edit.html  index.html  note.html
tornado_asgi_handler/: __init__.py
