[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>0.12"]

[tool]
[tool.poetry]
authors = ["Ahmed <akamran@colgate.edu>"]
description = ""
name = "django-crud"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^4.0"
python = "^3.8"
PyYAML = "^6.0"
pillow = "^8.4.0"
gunicorn = "^20.1.0"
whitenoise = "^6.0.0"
[tool.poetry.dev-dependencies]
